syntax = "proto3";

package auth;

// Import tá»« user.proto
import "proto/user.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  int32 age = 3;
  user.SocialMedia socialMedia = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
  string userId = 3;
  string username = 4;
  optional user.UserRole role = 5;
}
